--- a/main.html
+++ b/main.html
@@ -8,6 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	 <form action="" method="post">
+
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" required>
+<br>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+<br>
+    <label >Gender</label>
+    <input type="radio" name="gender" id="gender_m" required>
+    <label for="gender_m">Male</label>
+
+    <input type="radio" name="gender" id="gender_f" required>
+    <label for="gender_f">Female</label>
+
+<br>
+     <label for="laptop">Car Brands</label>
+    <select name="carBrands" id="cars">
+      <option value="NA">---Select one---</option>
+      <option value="BMW">BMW</option>
+      <option value="Audi">Audi</option>
+      <option value="Mercedez">Mercedez</option>
+    </select>
+
+<br>
+    <label for="carage">Car Age</label>
+    <input type="number" id="carage" name="carAge" required>
+
+<br>
+    <label for="dop">Date of Purchase (dop)</label>
+    <input type="date" id="dob" name="dob" required>
+<br>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" required>
+<br>
+    <button type="submit">Submit</button>
+   </form>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
