--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
     <label for="gender_f">Female</label>
 
 <br>
-     <label for="laptop">Car Brands</label>
+     <label for="cars">Car Brands</label>
     <select name="carBrands" id="cars">
       <option value="NA">---Select one---</option>
       <option value="BMW">BMW</option>
@@ -39,7 +39,7 @@
 
 <br>
     <label for="dop">Date of Purchase (dop)</label>
-    <input type="date" id="dob" name="dob" required>
+    <input type="date" id="dop" name="dop" required>
 <br>
     <label for="password">Password</label>
     <input type="password" id="password" name="password" required>
